@@ -1,6 +1,6 @@
 {
   "name": "melbot_20220713",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "melbot_20220713",
   "main": "index.js",
   "type": "module",
